# TradeCoach-AI

./: .gitignore  Anchor.toml  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: config.py  database.py  dependencies.py  main.py  railway.toml  requirements.txt
docs/: DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  PERFORMANCE_REVIEW_AND_TODO.md  PRODUCTION_IMPLEMENTATION_PLAN.md  PROJECT_COMPARISON.md  USAGE.md  architecture.md  marketplace-implementation-plan.md  solana_hackathon_strategy.md.resolved
frontend/: package-lock.json  package.json
nginx/: nginx.conf
programs/performance-verifier/: Cargo.toml
programs/performance-verifier/src/: errors.rs  lib.rs
programs/performance-verifier/src/instructions/: mod.rs  update_performance.rs  update_ranking.rs  verify_track_record.rs
programs/performance-verifier/src/state/: mod.rs  performance.rs  ranking.rs
programs/signal-recorder/: Cargo.toml
programs/signal-recorder/src/: errors.rs  lib.rs
programs/signal-recorder/src/instructions/: batch_record.rs  close_position.rs  mod.rs  open_position.rs  record_signal.rs
programs/signal-recorder/src/oracle/: pyth.rs
programs/signal-recorder/src/state/: mod.rs  position.rs  signal.rs
programs/strategy-registry/: Cargo.toml
programs/strategy-registry/src/: errors.rs  lib.rs
programs/strategy-registry/src/instructions/: delete_strategy.rs  initialize_platform.rs  mod.rs  register_strategy.rs  toggle_pause.rs  update_metadata_uri.rs
programs/strategy-registry/src/state/: mod.rs  platform.rs  strategy.rs
supabase/: migration_001_add_nonces_and_fix_backtest.sql  (+1 more)
(+180 files in other folders)
