[package]
name = "performance-verifier"
version = "0.1.0"
description = "StrategyVault - Performance Verifier (PnL, ranking, independent verification)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "performance_verifier"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
strategy-registry = { path = "../strategy-registry", features = ["cpi"] }
