[package]
name = "strategy-registry"
version = "0.1.0"
description = "StrategyVault - Strategy Registry Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "strategy_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
